samples/_failures_safe/1761043223_9fb0df_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e72f4bad.c: In function ‘lexer_next_token’:
./samples/SAFE/__tmp_e72f4bad.c:149:9: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  149 |         char next
      |         ^~~~
./samples/SAFE/__tmp_e72f4bad.c:149:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e72f4bad.c:149:9: error: expected declaration or statement at end of input
